--- a/OralSurgeonReport.html
+++ b/OralSurgeonReport.html
@@ -1591,7 +1591,7 @@ Population
 </tr>
 <tr>
 <td style="text-align:left;">
-Population Growth Rate
+Population Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 10.67%
@@ -1619,7 +1619,7 @@ Households
 </tr>
 <tr>
 <td style="text-align:left;">
-Household Growth Rate
+Household Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 11.03%
@@ -2050,7 +2050,7 @@ Population
 </tr>
 <tr>
 <td style="text-align:left;">
-Population Growth Rate
+Population Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 11.12%
@@ -2078,7 +2078,7 @@ Households
 </tr>
 <tr>
 <td style="text-align:left;">
-Household Growth Rate
+Household Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 11.2%
@@ -2515,7 +2515,7 @@ Population
 </tr>
 <tr>
 <td style="text-align:left;">
-Population Growth Rate
+Population Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 14.78%
@@ -2549,7 +2549,7 @@ Households
 </tr>
 <tr>
 <td style="text-align:left;">
-Household Growth Rate
+Household Growth Rate 2019-2024
 </td>
 <td style="text-align:center;">
 16.71%
